Cursor of Omnibox stays in LTR mode after setting to RTL mode

Fixed the bug caused by https://codereview.chromium.org/2660593002/.
The newly introduced |cursor_view_| did not consider RTL input mode.

TEST=TextfieldTest.TextCursorPositionInRTLTest and
TextfieldTest.TextCursorPositionInLTRTest

BUG=693437

Review-Url: https://codereview.chromium.org/2709633003
Cr-Commit-Position: refs/heads/master@{#452536}

Former-commit-id: 947341f55da060dd30bd492ab806049fb23bb109